--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
  <body>
  </body>
      <script type="text/javascript">
-         window.location.href = "https://wg-koethen-crmportal.aareon.com"; 
+         window.location.href = "https://aareon.com"; 
      </script>
  </html>
